# tdx-rust

./: .gitmodules  Cargo.toml  README.md  tdx-protocol.md
examples/: basic.rs  fast_hosts.rs  gbbq.rs  kline_all.rs  kline_during.rs  kline_util.rs  market_counts.rs  market_counts_with_bj.rs  test_get_bj_stocks.rs
src/: client.rs  dial.rs  lib.rs  main.rs
src/protocol/: codec.rs  constants.rs  frame.rs  messages.rs  mod.rs  test_data.rs  types.rs
tdx-test/: README.md  VERIFICATION_RESULTS.md  go.mod  go.sum  verify_test.go
tdx-test/test-data/: call_auction.json  code.json  connect.json  count.json  gbbq.json  heartbeat.json  history_minute.json  history_trade.json  index.json  kline.json  minute.json  quote.json  trade.json
tests/: protocol_test.rs
